[package]
name = "spatialtree"
description = "A fast and flexible generic spatial tree collection (Octree, Quadtree, etc)"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/alexpyattaev/spatialtree"
documentation = "https://docs.rs/spatialtree"
keywords = ["octree", "quadtree", "tree","lod", "generic"]
categories = ["data-structures"]


[dependencies]
arrayvec = "0.7.2"
duplicate = "1.0.0"
freelist = "0.1.0"
itertools = "0.10.5"
slab = "0.4.8"
soa_derive = "0.12.0"
static_assertions = "1.1.0"
rand ={version="0.8.5", features=['small_rng'], optional = true }
num-traits = "0.2.15"

[features]
default = ["rand"]
rand=["dep:rand"]

[dev-dependencies]
lru = "0.10.0"
rayon = "1.5"
glium = "0.30"
rand_derive = "0.5.0"
criterion = {version= "0.4.0", features=['html_reports']}

[[bench]]
name = "iterators"
harness = false

[[bench]]
name = "freelist"
harness = false

[[bench]]
name = "coordinates"
harness = false

[profile.release]
opt-level=3
overflow-checks = false
#debug=1
debug=0
strip = "symbols"
debug-assertions=false
lto="fat"
#panic="abort"
#codegen-units=1

[profile.bench]
#debug = 1
debug=0
lto="fat"
strip = "symbols"

