[package]
name = "spatialtree"
description = "A fast and flexible generic spatial tree collection (Octree, Quadtree, etc)"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/alexpyattaev/spatialtree"
documentation = "https://docs.rs/spatialtree"
keywords = ["octree", "quadtree", "tree","lod", "generic"]
categories = ["data-structures"]


[dependencies]
arrayvec = "0.7.2"
duplicate = "1.0.0"
slab = "0.4.8"
#soa_derive = "0.12.0"
rand ={version="0.8.5", features=['small_rng'], optional = true }

[features]
default = ["rand"]
rand=["dep:rand"]

[dev-dependencies]
freelist = "0.1.0"
lru = "0.10.0"
rayon = "1.5"
glium = "0.30"
rand_derive = "0.5.0"
criterion = {version= "0.4.0", features=['html_reports']}

[[bench]]
name = "iterators"
harness = false

[[bench]]
name = "freelist"
harness = false

[[bench]]
name = "coordinates"
harness = false

[profile.release]
opt-level=3
overflow-checks = false
debug=0
strip = "symbols"
debug-assertions=false
lto="fat"


[profile.bench]
debug=0
lto="fat"
strip = "symbols"

